# Audio-Visualiser

./: .clang-tidy  .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.claude/: audio-threading.md  cpp-hpc-reference.md  dsp-patterns.md  opengl-rendering.md
shaders/: blur.frag  composite.frag  epicycle.vert  fade.frag  kal.vert  lissajous.vert  milk.frag  nova.vert  particle.frag  particle.vert  pulse.frag  pulse.vert  quad.vert  scope.vert  spectrum.frag  spectrum.vert  waterfall.frag  web.frag  web.vert
src/: main.cpp
src/audio/: capture.cpp  capture.hpp  ring_buffer.hpp
src/dsp/: analyser.cpp  analyser.hpp  fft.cpp  fft.hpp  window.hpp
src/render/: renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  visualiser.cpp  visualiser.hpp
src/util/: logger.hpp  timer.hpp
